--- a/example/src/index.css
+++ b/example/src/index.css
@@ -2,4 +2,40 @@ body {
   margin: 0;
   padding: 1rem;
   font-family: sans-serif;
+  font-size: 18px;
+}
+
+.problems {
+  font-size: 1.5em;
+  list-style-type: none;
+  padding: 0;
+}
+
+.problems li {
+  margin: 1rem 0.5rem;
+}
+
+.problem-ui div {
+  display: inline-block;
+}
+
+.expression {
+  margin: 0 0.25rem;
+}
+
+.param {
+  margin: 0 0.5rem;
+}
+
+.symbol.eq {
+
+}
+
+.result-input {
+
+}
+
+.result-input input {
+  font-size: 1em;
+  max-width: 60px;
 }
