--- a/example/src/index.css
+++ b/example/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  padding: 1rem;
+  padding: 2rem;
   font-family: sans-serif;
   font-size: 18px;
 }
@@ -31,11 +31,11 @@ body {
 
 }
 
-.result-input {
-
+.result-form  {
+  display: inline-block;
 }
 
-.result-input input {
+.result-form input {
   border: 1px #efefef solid;
   font-size: 1em;
   max-width: 60px;
